2005-05-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/20303
	* c-pragma.c: Include "vec.h".
	(handle_pragma_visibility): Use VEC.

	* doc/invoke.texi: Remove the nested visibility push limit.

2005-06-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/17965
	* calls.c (expand_call, emit_library_call_value_1): Use xmalloc/free
	instead of alloca for really big argument sizes.

2005-11-19  Richard Henderson  <rth@redhat.com>

	PR tree-opt/24665
	* tree-gimple.c (is_gimple_id): Export.
	* tree-gimple.h (is_gimple_id): Declare.
	* tree-ssa-ccp.c (ccp_decl_initial_min_invariant): New.
	(get_default_value): Use it.
	(maybe_fold_stmt_indirect): Likewise.

2005-11-18  James E Wilson  <wilson@specifix.com>

	* builtins.c (fold_builtin_strstr): Pass s1 through fold_convert before
	returning it.

2005-11-18  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/24914
	* arm.c (arm_hard_regno_mode_ok): Co-processor registers aren't ok
	when not generating code to use that co-processor.

2005-11-18  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin/bfin.md (trap): New pattern.

2005-11-18  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin/crtlibid.s: New file.

2005-11-18  David Edelsohn  <edelsohn@gnu.org>
	    Alan Modra  <amodra@bigpond.net.au>

	PR target/24779
	Backport 2005-03-13  David Edelsohn  <edelsohn@gnu.org>,
	2005-03-20  David Edelsohn  <edelsohn@gnu.org>,
	2005-03-24  David Edelsohn  <edelsohn@gnu.org>,
	2005-09-11  David Edelsohn  <edelsohn@gnu.org>
	* config/rs6000/rs6000.c (easy_fp_constant): SFmode constant
	0.0f is easy.  Return 0 for SFmode and DFmode before reload when
	flag_unsafe_math_optimizations not enabled.
	(reg_or_none500mem_operand): New predicate.
	(zero_reg_mem_operand): New predicate.
	(rs6000_generate_compare): Test flag_finite_math_only, not
	flag_unsafe_math_optimizations.
	* config/rs6000/rs6000.h (PREDICATES): Add zero_reg_mem_operand
	and reg_or_none500mem_operand.